--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
     <div class="conteiner-video">
-        <video src="Cinnamon Girl.mp4" autoplay></video>
+        <video autoplay loop muted>
+            <source src="Cinnamon Girl.mp4" type="video/mp4">
+        </video>
     </div>
 </body>
 </html>
