--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="conteiner-video">
-        <video autoplay loop muted>
+        <video autoplay loop>
             <source src="Cinnamon Girl.mp4" type="video/mp4">
         </video>
     </div>
