--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
             <source src="Cinnamon Girl.mp4" type="video/mp4">
         </video>
     </div>
+    <div class="conteiner-audio">
+        <audio autoplay loop>
+            <source src="Lana Del Rey Cinnamon Girl.mp3" type="audio/mp3">
+        </audio>
+    </div>
 </body>
 </html>
