--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </video>
     </div>
     <div class="conteiner-audio">
-        <audio controls preload="auto" autoplay>
+        <audio preload="auto" autoplay>
             <source src="Lana Del Rey Cinnamon Girl.mp3" type="audio/mp3">
         </audio>
     </div>
