--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               Tu navegador no soporta este video.
             </video>
           </div>
-          <audio autoplay id="musica" src="Lana Del Rey Cinnamon Girl.mp3"></audio>
+          <audio controls id="musica" src="Lana Del Rey Cinnamon Girl.mp3"></audio>
     </section>
     <script src="script.js"></script>
 </body>
