--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <!-- Contenedor multimedia -->
         <div id="media-container" class="hidden">
             <audio autoplay id="musica">
-                <source src="/sonido/Dear God.mp3" type="audio/mp3">
+                <source src="Dear God.mp3" type="audio/mp3">
                 Tu navegador no soporta el audio.
             </audio>
             <video id="video" width="500" autoplay muted aria-label="Video musical de Avenged Sevenfold">
-                <source src="/mobile/Avenged Sevenfold Dear God.mp4" type="video/mp4">
+                <source src="Avenged Sevenfold Dear God.mp4" type="video/mp4">
                 Tu navegador no soporta este video.
             </video>
         </div>
