--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </article>
         <!-- Contenedor multimedia -->
         <div id="media-container" class="hidden">
-            <audio autoplay id="musica">
+            <audio id="musica" controls>
                 <source src="Dear God.mp3" type="audio/mp3">
                 Tu navegador no soporta el audio.
             </audio>
