--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </article>
         <!-- Contenedor multimedia -->
         <div id="media-container" class="hidden">
-            <audio id="musica" controls style="margin: 15px; opacity: 0.3; ">
+            <audio id="musica" controls style="margin-top: 15px; opacity: 0.3;">
                 <source src="Dear God.mp3" type="audio/mp3">
                 Tu navegador no soporta el audio.
             </audio>
